--- a/src/app/feedback/feedback-history/feedback-history.component.html
+++ b/src/app/feedback/feedback-history/feedback-history.component.html
@@ -36,7 +36,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let feedback of feedbacks; let i = index" (click)="onClickFeedback(i)">
+                    <tr *ngFor="let feedback of feedbacks; let i = index" (click)="onClickFeedback(i)" [ngClass]="{'new_feedback':!feedback.read}">
                         <td>{{feedback.title}}</td>
                         <td>{{feedback.from}}</td>
                         <td>{{feedback.created_at | date: 'shortDate'}}</td>
@@ -91,9 +91,12 @@
                     <label>Title:</label> {{feedback_title}}<br>
                     <label>Category:</label> {{feedback_category}}<br>
                     <label>Content:</label> {{feedback_content}}<br>
+                    <label *ngIf="feedback_from != 'Anonymous' && authService.current_user.role_id == appService.userType.teacher && from_to == 1">Reply: </label>
+                    <textarea rows="3" *ngIf="feedback_from != 'Anonymous' && authService.current_user.role_id == appService.userType.teacher && from_to == 1" [(ngModel)]="reply_content" autosize class="form-control"></textarea>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-danger pull-left" (click)="deleteFeedback()">Delete</button>
+                    <button *ngIf="feedback_from != 'Anonymous' && authService.current_user.role_id == appService.userType.teacher && from_to == 1" type="button" class="btn btn-primary" data-dismiss="modal" (click)="sendReply()">Reply</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
